Project

General

Profile

Actions

Bug #56392

closed

ceph build warning: comparison of integer expressions of different signedness

Added by Kamoltat (Junior) Sirivadhna almost 2 years ago. Updated almost 2 years ago.

Status:
Resolved
Priority:
Normal
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

../src/mon/Elector.cc: In member function ‘void Elector::notify_rank_removed(int)’:
../src/mon/Elector.cc:733:20: warning: comparison of integer expressions of different signedness: ‘int’ and ‘unsigned int’ [-Wsign-compare]
if (rank_removed < paxos_size()) {
~~~~~~~~~~~^~~~~~~~~~~~~~

Actions #1

Updated by Neha Ojha almost 2 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 46862
Actions #2

Updated by Kamoltat (Junior) Sirivadhna almost 2 years ago

Note: this warning was caused by merging https://github.com/ceph/ceph/pull/46029/

Actions #3

Updated by Kamoltat (Junior) Sirivadhna almost 2 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF