mon/Elector: make paxos_size() an int

We want to get rid of the warning:

‘int’ and ‘unsigned int’ [-Wsign-compare]
if (rank_removed < paxos_size()) {
~~~~~~~~~~~~^~~~~~~~~~~~~

Also, according to google style guide, we should
"try to avoid unsigned types and not use an
unsigned type merely to assert that a variable
is non-negative".

https://google.github.io/styleguide/cppguide.html#Integer_Types

Fixes: https://tracker.ceph.com/issues/56392

Signed-off-by: Kamoltat <ksirivad@redhat.com>